Start with development

--- a/playbooks/roles/download_plone_installer/tasks/main.yml
+++ b/playbooks/roles/download_plone_installer/tasks/main.yml
@@ -3,4 +3,6 @@
 
 - name: Downloading the latest Plone UI
   sudo: False
-  command: wget --no-check-certificate https://launchpad.net/plone/4.3/4.3.1/+download/Plone-4.3.1-UnifiedInstaller.tgz
+  command: wget --no-check-certificate https://launchpad.net/plone/4.3/4.3.2/+download/Plone-4.3.2-UnifiedInstaller.tgz
+
+# todo: run action only once and check if it was working, 
