--- a/playbooks/ubuntu.yml
+++ b/playbooks/ubuntu.yml
@@ -2,11 +2,11 @@
 # Ubuntu Playbook
 
 - hosts: ubuntu1204
-  user: test
+  remote_user: test
   sudo: yes
 
   roles:
-#   - apt-update
+   - apt-update
 #   - ubuntu_packages
 #   - download_plone_installer
-   - run_installer
+#   - run_installer
