--- a/ansible.cfg
+++ b/ansible.cfg
@@ -10,7 +10,7 @@
 
 # some basic default values...
 
-hostfile       = etc/ansible/hosts
+hostfile       = etc/hosts
 library        = usr/share/ansible
 remote_tmp     = $HOME/.ansible/tmp
 pattern        = *
