Add delete old files

--- a/provisioning/roles/run_installer/tasks/main.yml
+++ b/provisioning/roles/run_installer/tasks/main.yml
@@ -9,3 +9,7 @@
   sudo: False
   command: ./Plone-4.3.2-UnifiedInstaller/install.sh standalone
 
+- name: Deleting old files ...
+  sudo: False
+  command: rm -rf Plone-4.3.2-UnifiedInstaller.tgz
+
