--- a/provisioning/roles/download_plone_installer/tasks/main.yml
+++ b/provisioning/roles/download_plone_installer/tasks/main.yml
@@ -3,6 +3,5 @@
 
 - name: Downloading the latest Plone UI
   sudo: False
-  command: wget --no-check-certificate https://launchpad.net/plone/4.3/4.3.2/+download/Plone-4.3.2-UnifiedInstaller.tgz
+  command: wget --no-check-certificate https://launchpad.net/plone/4.3/4.3.2/+download/Plone-4.3.2-UnifiedInstaller.tgz creates=Plone-4.3.2-UnifiedInstaller.tgz
 
-# todo: run action only once and check if it was working, 
